{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "b0ceccc1-36b7-43b8-bf89-84d8598d6883",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5154ba91-d124-4e1a-9a64-a3416889869e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "23de0427-415e-4193-8784-075855cf676e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BaseAttack",
                    "type": "Button",
                    "id": "eece53a4-1e86-4e92-8fc8-989c86a0afb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.4,behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongAttack",
                    "type": "Button",
                    "id": "a8523075-9594-43fa-ba29-ac20fb281941",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.6,pressPoint=0.5)",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "6407c8d0-3a03-4445-b45b-df64a387e517",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Transform",
                    "type": "Button",
                    "id": "5e130a03-ca8d-4930-a54f-67c4d3e54d91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LeftRightMove",
                    "id": "82a5669b-b920-4a24-abe5-7a86a27a57c1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "846378db-37ce-4785-95fd-5bd6c5a165ce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "21a71518-e891-4a29-a02b-d114b777e2f1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c44c92d8-238e-47a1-a3ab-638d5f01e2d3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beed74cb-5dd9-4b35-bb72-ccbc5f888cbe",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aee8f61-425d-4d5b-843d-61012bd8d68d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrongAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ede74d23-1447-4f30-bb1d-af917aba21ca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3a9e87b-b150-419d-94db-d3a9754c34bf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Transform",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}